lang/tests/compile_fail/close_ambiguous_args.stderr
error: `close(...)` must include both `authority = ...` and `token_program = ...` for token accounts, or neither for program accounts
  --> tests/compile_fail/close_ambiguous_args.rs:16:20
   |
16 |     #[account(mut, close(dest = dest, authority = dest))]
   |                    ^^^^^
